# PyProjectTemplate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yml
lib/: decorators.py
src/: main.py
test/: test_main.py
